# todolist

./: Item.py  ItemCreationManager.py  README.md  ToDoListManager.py  example.py  main.py  pyproject.toml  tasks.json  tasks.txt
frames/: BlankFrame.py  ItemCreationManager.py  ListFrame.py
