[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "A to do list manager written in python"
authors = ["Thomas Delaney <thomas.delaney@posteo.net>"]
license = "GNU Licence, I suppose"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
